--- a/FilmBayMVC/bin/FilmBayMVC.dll.config
+++ b/FilmBayMVC/bin/FilmBayMVC.dll.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,8 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-FilmBayMVC-20150104082632.mdf;Initial Catalog=aspnet-FilmBayMVC-20150104082632;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-FilmBayMVC-20150104082632.mdf;Initial Catalog=aspnet-FilmBayMVC-20150104082632;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="aspnet_FilmBayMVC_20150104082632ConnectionString" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-FilmBayMVC-20150104082632.mdf;Initial Catalog=aspnet-FilmBayMVC-20150104082632;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Entities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\v11.0;attachdbfilename=|DataDirectory|\aspnet-FilmBayMVC-20150104082632.mdf;initial catalog=aspnet-FilmBayMVC-20150104082632;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ModelEntities" connectionString="metadata=res://*/Models.DataBaseModel.csdl|res://*/Models.DataBaseModel.ssdl|res://*/Models.DataBaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\v11.0;attachdbfilename=|DataDirectory|\aspnet-FilmBayMVC-20150104082632.mdf;initial catalog=aspnet-FilmBayMVC-20150104082632;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entities1" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\v11.0;attachdbfilename=|DataDirectory|\aspnet-FilmBayMVC-20150104082632.mdf;initial catalog=aspnet-FilmBayMVC-20150104082632;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
