--- a/FilmBayMVC/FilmBayMVC.csproj
+++ b/FilmBayMVC/FilmBayMVC.csproj
@@ -161,7 +161,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Connectivity\Startup.Auth.cs" />
     <Compile Include="Connectivity\AddFilmInfo.cs" />
     <Compile Include="Connectivity\DBAccess.cs" />
     <Compile Include="Connectivity\ModelCreator.cs" />
@@ -191,6 +191,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\ModelsKeeper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\aspnet-FilmBayMVC-20150104082632.mdf" />
@@ -199,6 +200,7 @@
     </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\fonts.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -210,6 +212,15 @@
       <LastGenOutput>MyLINQ.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="fonts\MYRIADPRO-BOLD.OTF" />
+    <Content Include="fonts\MYRIADPRO-BOLDCOND.OTF" />
+    <Content Include="fonts\MYRIADPRO-BOLDCONDIT.OTF" />
+    <Content Include="fonts\MYRIADPRO-BOLDIT.OTF" />
+    <Content Include="fonts\MYRIADPRO-COND.OTF" />
+    <Content Include="fonts\MYRIADPRO-CONDIT.OTF" />
+    <Content Include="fonts\MYRIADPRO-REGULAR.OTF" />
+    <Content Include="fonts\MYRIADPRO-SEMIBOLD.OTF" />
+    <Content Include="fonts\MYRIADPRO-SEMIBOLDIT.OTF" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -262,6 +273,7 @@
     <Content Include="Views\UserPage\UserInfo.cshtml" />
     <Content Include="Views\Admin\EditFilm.cshtml" />
     <Content Include="Views\FilmPage\FilmPage.cshtml" />
+    <Content Include="Views\Shared\_userMovieSearchPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
