--- a/FilmBayMVC/FilmBayMVC.csproj
+++ b/FilmBayMVC/FilmBayMVC.csproj
@@ -277,6 +277,7 @@
     <Content Include="Views\Shared\_LoadingAnimationPartial.cshtml" />
     <Content Include="Views\Home\_dropDownListPartialView.cshtml" />
     <Content Include="Views\Home\_filmsSortedByGenereAndRatingPartialView.cshtml" />
+    <Content Include="Views\FilmPage\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
